[project]
name = "software-patterns-in-python"
version = "0.1.0"
description = "A collection of software patterns implemented in Python, including (but not limited to) data structures, algorithms, and design patterns."
authors = [
    { name = "Andy Maskiell", email = "maskiella@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/saurookadook/software-patterns-in-python"

[dependency-groups]
dev = [
    "faker>=37.11.0",
    "pytest>=8.4.2",
    "rich>=14.2.0",
]

all = [
    { include-group = 'dev'}
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = ["tests"]
# xfail_strict = true

[tool.uv]
default-groups = ["dev"]
required-version = ">=0.9.0"
